# OOP2025Project

./: CCCS.cpp  CCCS.h  CCVS.cpp  CCVS.h  CMakeLists.txt  Capacitor.cpp  Capacitor.h  Circuit.cpp  Circuit.h  CircuitException.cpp  CircuitException.h  Controller.cpp  Controller.h  CurrentSource.cpp  CurrentSource.h  Element.cpp  Element.h  ElementException.cpp  ElementException.h  Inductor.cpp  Inductor.h  Node.cpp  Node.h  Resistor.cpp  Resistor.h  VCCS.cpp  VCCS.h  VCVS.cpp  VCVS.h  Viwe.cpp  Viwe.h  VoltageSource.cpp  VoltageSource.h  header.h  main.cpp  regexs.h
